creusot/tests/should_fail/prusti/expiry/possible_set_param.stderr
error: Cannot move to the state set 'a since it might have been instantiated with multiple states
 --> possible_set_param.rs:5:16
  |
5 | #[after_expiry('a, result == *x)]
  |                ^^

error: aborting due to 1 previous error

